data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_658.wast
;; 9. **Chain of False Conditions Blocking Execution**:    - Create a chain of `if` and `block` constructs with `br_if` instructions all set to false conditions. Check if execution continues linearly through all blocks without any unexpected branching, testing the serial evaluation of multiple false conditions.

(assert_invalid
  (module
    (func (result i32)
      (block
        (if (i32.const 0) (then (br 0)))
        (block
          (if (i32.const 0) (then (br 1)))
          (block
            (if (i32.const 0) (then (br 2)))
            (i32.const 42)
          )
        )
      )
    )
  )
  "type mismatch"
)